<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a correct username and password</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storeage</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="video_size_limit">The selected video must be less than 10MB</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_msg">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="file_type_indicator_image">File type indicator image</string>
    <string name="title_activity_view_image">Ribbit</string>

    <string name="background_description">Ribbit Frog Background Image</string>
    <string name="app_subtitle">A Treehouse Project</string>

    <string name="cancel_button_label">CANCEL</string>

    <string name="push_message" formatted="false">You have a new Ribbit message from %s!</string>
</resources>
