<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/background_description" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubtitle"
        android:text="@string/app_subtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        style="@style/AuthButton" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />


</RelativeLayout>
